# D2D_project

./: .cproject  .gitignore  .project  D2D_project.exe.stackdump  gdb.exe.stackdump
common/inc/: d2d_message_type.h  d2d_system_global.h  dictionary.h  interface_rrc_rlc.h  list.h  log.h  mem_block.h  message_list.h  test_time.h  typedef.h
common/src/: dictionary.c  list.c  log.c  mem_block.c  message_list.c  test_time.c
configure/sourceinght_config/: d2d_sourceinsight_cfg.xml  utils.em
doc/1-方案设计/: D2D 工程代码框架初稿.xmind  D2D-HARQ方案设计v0.1-张雪坤.docx  D2D物理层梳理与设计_v1.0.docx
doc/10-会议纪要/: D2D项目会议纪要-20190709.doc  D2D项目会议纪要-20190712.doc  D2D项目会议纪要-20190730.doc  答复 D2D 系统--后续讨论事宜--讨论结论.msg
doc/2-需求讨论/: D2D MAC 需求.xlsx  RLC需求 列表V0.01.xlsx  RRC 需求列表.xlsx
doc/3-流程设计/: 1-D2D初始化.vsdx  2-源端PBCH发送.vsdx  3-目的端CS和PBCH 接收.vsdx  4-SIB1发送和接收.vsdx  5-rrc 连接建立.vsdx  6-数据发送.vsdx  7-数据接收.vsdx  8-同步-失步-RRC连接被动释放.vsdx  9-同步-失步-同步.vsdx
interface/: interface_ip_rlc.h  interface_mac_phy.h  interface_mac_rlc.h  interface_rrc_mac.h  interface_rrc_phy.h  interface_rrc_rlc.h
makefile/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
platform/ocp_itti/: intertask_interface.h  intertask_interface_d2d.c  task_declare.h  task_define.c  thread_communication_demo.c
platform/osp_lib/: osp_ex.h
protocol/IP/: ip_msg_task.c  ip_task.c  ip_udp_msg.c
protocol/MAC/: Makefile  Makefile_Bak  mac
protocol/MAC/inc/: .messageDefine.h.swp  common_channel.h  dci_info.h  emac_enum_def.h  emac_mode.h  emac_status.h  mac.h  mac_cce.h  mac_config.h  mac_defs.h  mac_header.h  mac_osp_interface.h  mac_ra.h  mac_rx.h  mac_tx.h  mac_ue.h  mac_vars.h  messageDefine.h  msg_handler.h  msg_queue.h  pre_schedule.h  ra.h  smac_common_channel.h  smac_context.h  smac_info.h  smac_schedule_result.h  smac_task.h  smac_ue_info.h  tasks_def.h  ue_index.h
protocol/MAC/src/: Makefile  common_channel.c  log.c  mac.c  macTest.c  mac_cce.c  mac_config.c  mac_osp_interface.c  mac_ra.c  mac_rx.c  mac_tx.c  mac_ue.c  mac_vars.c  msg_handler.c  msg_queue.c  pre_schedule.c  ra.c  ue_index.c
protocol/MAC/test/: Makefile  description.txt  mac_test.c  run.sh  test.sh
protocol/MAC/test/case/: macTest.c  macTest_1_UE_1_DLUL_DATA.c  macTest_1_UE_1_DLUL_DATA_RETX.c  macTest_1_UE_1_DL_DATA.c  macTest_1_UE_1_DL_DATA_RETX.c  macTest_1_UE_1_UL_DATA.c  macTest_1_UE_1_UL_DATA_RETX.c  macTest_1_UE_2_DLUL_DATA.c  macTest_1_UE_2_DL_DATA.c  macTest_1_UE_2_UL_DATA.c  macTest_1_UE_Access.c  macTest_1_UE_Access_Fail.c  macTest_1_UE_Access_ReTry.c  macTest_1_UE_In_Sync.c  macTest_1_UE_Out_Sync.c  macTest_Mac_Init.c  macTest_Mac_Init_Fail.c  macTest_Mac_Timing_Sync.c  macTest_Mac_Timing_Sync_Period.c  macTest_PBCH_Send_And_Receive.c  macTest_Pre_Scheduling_Single_Task.c  macTest_Scheduling_Single_Task.c  macTest_System_Info_Send_And_Receive.c  macTest_Timer.c  macTest_UE_Multi_Logic_Channel_Setup.c  macTest_UE_One_Logic_Channel_Setup.c
protocol/MAC/test/inc/: d2d_sim.h  mac_testconfig.h  messageDefine.h  msg_queue.h  mytask.h  phy_sim.h  rlc_sim.h  rrc_sim.h
protocol/MAC/test/src/: d2d_dest_sim.c  d2d_sim.c  macTest.c  mac_sct_config.c  mac_test.c  msg_queue.c  mytask.c  phy_rx_sim.c  phy_sim.c  phy_tx_sim.c  rlc_dst_sim.c  rlc_sim.c  rlc_src_sim.c  rrc_dest_sim.c  rrc_dst_sim.c  rrc_sim.c  rrc_src_sim.c
protocol/RLC/inc/: hashtable.h  mac_rlc_primitives.h  rlc.h  rlc_def.h  rlc_def_lte.h  rlc_tm.h  rlc_tm_entity.h  rlc_tm_init.h  rlc_tm_structs.h  rlc_type.h  rlc_um.h  rlc_um_constants.h  rlc_um_control_primitives.h  rlc_um_entity.h  rlc_um_structs.h
protocol/RLC/src/: hashtable.c  rlc.c  rlc_const.c  rlc_control_config_task.c  rlc_global_var.c  rlc_mac.c  rlc_rrc.c  rlc_rrc_config_task.c  rlc_rx_task.c  rlc_send_message.c  rlc_tm.c  rlc_tx_task.c  rlc_um.c  rlc_um_receive.c
protocol/RRC/: dummy_rrc_test.c  dummy_rrc_test_task.c  dummy_test_rrc.h  main.c  rrc_thread.c  timer_int_task.c
protocol/RRC/inc/: CCCH-Message.h  CCCH-MessageType.h  Carrier.h  DL-AM-RLC.h  DL-UM-RLC.h  DRB-Identity.h  DRB-ToAddMod.h  DRB-ToAddModList.h  DRB-ToReleaseList.h  LOGICCHENNEL-Identity.h  LogicChannelConfig.h  MacConfig.h  MasterInformationBlock.h  P-Max.h  PdschDedicateConfig.h  PollByte-r14.h  PollByte.h  PollPDU-v1310.h  PollPDU.h  PuschHoppingConfig.h  RCConnectionComplete.h  RLC-Config.h  RRCConnectionComplete.h  RRCConnectionRelease.h  RRCConnectionRequest.h  RRCConnectionSetup.h  RadioResourceConfigCommonSIB.h  RadioResourceConfigDedicate.h  SN-FieldLength.h  SRB-Identity.h  SRB-ToAddMod.h  SRB-ToAddModList.h  SystemInformationBlockType1.h  T-PollRetransmit.h  T-Reordering.h  T-StatusProhibit.h  TDD-Config.h  UL-AM-RLC.h  UL-UM-RLC.h  UlRefSigConfig-PUSCH.h  (+1 more)
protocol/RRC/inc/asn1c_inc/: Rectangle.h
protocol/RRC/src/: CCCH-Message.c  CCCH-MessageType.c  Carrier.c  DL-AM-RLC.c  DL-UM-RLC.c  DRB-Identity.c  DRB-ToAddMod.c  DRB-ToAddModList.c  DRB-ToReleaseList.c  LOGICCHENNEL-Identity.c  LogicChannelConfig.c  MacConfig.c  MasterInformationBlock.c  P-Max.c  PdschDedicateConfig.c  PollByte-r14.c  PollByte.c  PollPDU-v1310.c  PollPDU.c  PuschHoppingConfig.c  RCConnectionComplete.c  RLC-Config.c  RRCConnectionComplete.c  RRCConnectionRelease.c  RRCConnectionRequest.c  RRCConnectionSetup.c  RadioResourceConfigCommonSIB.c  RadioResourceConfigDedicate.c  SN-FieldLength.c  SRB-Identity.c  SRB-ToAddMod.c  SRB-ToAddModList.c  SystemInformationBlockType1.c  T-PollRetransmit.c  T-Reordering.c  T-StatusProhibit.c  TDD-Config.c  UL-AM-RLC.c  UL-UM-RLC.c  UlRefSigConfig-PUSCH.c  (+13 more)
protocol/RRC/src/asn1c_src/: BIT_STRING.c  NativeEnumerated.c  Rectangle.c  constr_SEQUENCE.c
